# grounded-machine-invention

./: .gitignore  CITATION.cff  LICENSE  README.md
inventor-loop/: .env.example  README.md  pyproject.toml
inventor-loop/inventor/: llm.py  memory.py  metrics.py  primitives.py  tasks.py  world.py
inventor-loop/inventor/agents/: __init__.py  inventor_loop.py
inventor-loop/results/: inv_only.json  main.json  token_budget1.json
inventor-loop/scripts/: run_comparison.py
poc/: README.md  pyproject.toml  requirements.txt
poc/inventor/: __init__.py
poc/inventor/agents/: base.py  token_baseline.py
poc/results/: smoke.json
poc/tests/: test_world.py
